Corrected align center in menu on smartphone

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -17,7 +17,6 @@
   float: left;
   padding: 5rem;
   border-radius: 30px;
-  color: var(--primary);
   background: var(--secondary);
 }
 
